[package]
name = "dft"
version = "0.1.0"
authors = ["Andrey Lazarev <andrey.lazarev34@gmail.com>"]
edition = "2020"
include = [
    "/Cargo.toml",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
    "/README.md",
    "/src/**",
    "/tests/**/*.rs",
    "/tests/**/*.json",
]
keywords = ["dft", "fourier", "transform"]
[features]
default = ["std"]
std = ["multiversion/std", "num-traits/std"]
alloc = []

[dependencies]
multiversion = { version = "0.6", default-features = false }
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
num-complex = { version = "0.2", default-features = false }
cargo-expand = { version = "0.4.9"}
